Bug 350458 - Choqok provides link to individual tweets with improper numeric formatting, causing invalid links.
Summary: Choqok provides link to individual tweets with improper numeric formatting, c...
Status: RESOLVED FIXED
Alias: None
Product: choqok
Classification: Unmaintained
Component: Twitter (other bugs)
Version First Reported In: Git
Platform: Compiled Sources Linux
: NOR major
Target Milestone: ---
Assignee: Andrea Scarpino
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-21 16:35 UTC by Jon Clark
Modified: 2016-08-04 10:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jon Clark 2015-07-21 16:35:20 UTC
Hello.

On using the latest git ( as of time of this posting, did a compilation from sources no more than 10 minutes ago ) clicking on the "time ago" link to get to the individual tweet, it will, for about 99% of the links, provide the link in an invalid format, modifying the timestamp with a decimal point and a e+(integer) format, as shown in the input boxes filled below.

I have categorized this as major, as it breaks being able to share individual tweets.

Reproducible: Always

Steps to Reproduce:
1. Find a post I want to link to a friend
2.Click on link to individual post, which is shown as $amount_of_time ( Eg, 10 min, 20 seconds, etc )


Actual Results:  
Browser opened with links in the following format:
https://twitter.com/EFF/status/6.2352768687958016e+17

( note the decimal point and e+17)

Expected Results:  
Browser should have opened in the following format:
https://twitter.com/EFF/status/623527686879580160

( whole number )
Comment 1 Andrea Scarpino 2015-07-25 09:46:43 UTC
Git commit 6efb6cf0b45b74affbc7ef073b24f2e1107c3208 by Andrea Scarpino.
Committed on 25/07/2015 at 09:46.
Pushed by scarpino into branch 'master'.

[Twitter] Fix post url generation

M  +3    -0    microblogs/twitter/twittermicroblog.cpp

http://commits.kde.org/choqok/6efb6cf0b45b74affbc7ef073b24f2e1107c3208
Comment 2 Jon Clark 2015-07-26 05:52:47 UTC
Works perfectly! No more mangled URLs, thank you!