[Twitter] Fix post url generation

BUG:350458